k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-template-svc
spec:
  selector:
    app: fullstack-template
  ports:
    - port: 80
      targetPort: 8000
      name: web
